Fix items alignment issues

--- a/src/css/skills-and-tools.scss
+++ b/src/css/skills-and-tools.scss
@@ -1,13 +1,18 @@
 @import 'functions.scss';
 
 .skills-and-tools {
-    padding: 0 4rem;
+    padding: 4rem;
+    @include display-flex(column, center, center, initial);
+}
+
+.skills-head-title {
+    align-self: flex-start;
 }
 
 .skills-section {
     display: grid;
     grid-template-columns: 10rem auto;
-    gap: 1.5rem;
+    gap: 2.5rem;
     position: relative;
     padding: 2rem;
 }
@@ -28,7 +33,8 @@
 
 .skill-item {
     @include display-flex(column, center, center, 1rem);
-    width: 7.1rem;
+    align-self: flex-start;
+    width: 7.25rem;
 }
 
 .skill-item p {
@@ -45,7 +51,7 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-self: flex-start;
-    gap:  2rem 1rem;
+    gap:  2rem 1.25rem;
 }
 
 .skill-section-container {
@@ -53,4 +59,6 @@
     padding: 2rem;
     border-radius: 2.5rem;
     border: solid 4px $elusive;
+    width: 90%;
+    max-width: 75rem;
 }
